objects/DBM_Data_Entry__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_1_Display_Label__c</fullName>
        <formula>Grouping_1__r.Display_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 1 Display Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_1_Link_to_Record__c</fullName>
        <formula>Grouping_1__r.Link_to_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 1 Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_1_Order__c</fullName>
        <formula>Grouping_1__r.Grouping_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 1 Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping_1_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping 1 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DBM_Data_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping 1</label>
        <referenceTo>DBM_Report_Grouping_Entry__c</referenceTo>
        <relationshipLabel>DBM Data Entries (Grouping 1)</relationshipLabel>
        <relationshipName>DBM_Data_Entries_Grouping_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_2_Display_Label__c</fullName>
        <formula>Grouping_2__r.Display_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 2 Display Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_2_Link_to_Record__c</fullName>
        <formula>Grouping_2__r.Link_to_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 2 Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_2_Order__c</fullName>
        <formula>Grouping_2__r.Grouping_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouping 2 Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping_2_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping 2 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DBM_Data_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping 2</label>
        <referenceTo>DBM_Report_Grouping_Entry__c</referenceTo>
        <relationshipLabel>DBM Data Entries (Grouping 2)</relationshipLabel>
        <relationshipName>DBM_Data_Entries_Grouping_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <referenceTo>DBM_Report__c</referenceTo>
        <relationshipLabel>DBM Data Entries</relationshipLabel>
        <relationshipName>DBM_Data_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>DBM Data Entry</label>
    <nameField>
        <displayFormat>DBMDE-{0000}</displayFormat>
        <label>DBM Data Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DBM Data Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>